--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "6.19.4",
+    "@clerk/nextjs": "^6.20.0",
+    "@heroicons/react": "^2.2.0",
     "@types/node": "^22.10.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
