--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
